fixed gloabl spacing to match zeplin's 8px

--- a/core/src/FieldLabel/FieldLabel.less
+++ b/core/src/FieldLabel/FieldLabel.less
@@ -9,7 +9,7 @@
   line-height: @line-height-label;
   letter-spacing: 0.3px;
   color: @zesty-dark-blue;
-  padding-bottom: 5px;
+  padding-bottom: 8px;
 
   .TextFieldRequired {
     color: @zesty-red;
